# tfg-prototype

./: .gitignore  CMakeLists.txt  HaversideFeetAlgorithm.cpp  HaversideFeetAlgorithm.h  HaversideKilometerAlgorithm.cpp  ILandmarkDBRepository.h  Localization.xml  SQLiteLandmarkRepository.cpp  SQLiteLandmarkRepository.h  index.html  main.cpp
DB/: landmark.db
FrontEnd/: index.html  script.js  style.css
Testing/: TestRequest.py
Utils/: CMakeLists.txt  DistanceMetric.h  GlobalConstants.h  Landmark.h  Language.h  Logger.cpp  Logger.h
src/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/Application/: CMakeLists.txt  LandmarkService.cpp  LandmarkService.h
src/Core/Domain/: CMakeLists.txt  DistanceMetric.h  DomainConstants.h  HaversideKilometerAlgorithm.h  HaversideMilesAlgorithm.cpp  HaversideMilesAlgorithm.h  Landmark.h  Language.h
src/Core/Domain/Application/: LandmarkService.cpp  LandmarkService.h
src/Core/Domain/HaversideAlgorithms/: HaversideFeetAlgorithm.cpp  HaversideFeetAlgorithm.h  HaversideKilometerAlgorithm.cpp  HaversideKilometerAlgorithm.h  HaversideMilesAlgorithm.cpp  HaversideMilesAlgorithm.h
src/Core/Domain/HaversineAlgorithms/: CMakeLists.txt  HaversineFeetAlgorithm.cpp  HaversineFeetAlgorithm.h  HaversineKilometerAlgorithm.cpp  HaversineKilometerAlgorithm.h  HaversineMilesAlgorithm.cpp  HaversineMilesAlgorithm.h
src/Core/Ports/: IHaversideAlgorithmStrategy.h  IHaversineAlgorithmStrategy.h  ILandmarkDBRepository.h
src/Infrastructure/: CMakeLists.txt
src/Infrastructure/Localization/: CMakeLists.txt  LocalizationManager.cpp  LocalizationManager.h
src/Infrastructure/Persistence/: CMakeLists.txt  SQLiteLandmarkRepository.cpp  SQLiteLandmarkRepository.h
src/Infrastructure/Persistence/Api/: CMakeLists.txt  LandmarkController.cpp  LandmarkController.h
src/Infrastructure/Persistence/Mappers/: CmakeLists.txt  LandmarkFilterCategoryMapper.h  LandmarkFilterContinentMapper copy.h  LandmarkFilterContinentMapper.h  LandmarkFilterTypeMapper.h  LanguageMapper.cpp  LanguageMapper.h
